--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "@auth0/nextjs-auth0": "^1.9.2",
+    "@graphql-yoga/node": "^2.13.13",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@prisma/client": "^4.4.0",
     "autoprefixer": "^10.4.12",
+    "graphql": "^16.6.0",
     "next": "12.3.1",
     "postcss": "^8.4.16",
     "react": "18.2.0",
@@ -19,12 +24,15 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.7",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "prisma": "^4.3.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.4.0",
     "typescript": "4.8.3"
   }
 }
