--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db": "docker run -ti --rm --net=host -e POSTGRES_PASSWORD=postgres postgres",
+    "setup": "DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres prisma migrate dev",
+    "predev": "prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -24,6 +27,7 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/cookies": "^0.7.7",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
