--- a/.env.local-example
+++ b/.env.local-example
@@ -4,4 +4,4 @@ AUTH0_ISSUER_BASE_URL=
 AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
