--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "setup": "DATABASE_URL=postgres://postgres:postgres@db:5432/postgres prisma migrate dev",
-    "predev": "prisma generate",
+    "predev": "DATABASE_URL=postgres://postgres:postgres@db:5432/postgres prisma migrate dev && prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -23,9 +22,14 @@
     "autoprefixer": "^10.4.12",
     "graphql": "^16.6.0",
     "next": "12.3.1",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^2.16.105",
     "postcss": "^8.4.16",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
