--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.4.0",
+    "@solana/wallet-adapter-base": "^0.9.18",
+    "@solana/wallet-adapter-react": "^0.15.20",
+    "@solana/wallet-adapter-react-ui": "^0.9.18",
+    "@solana/wallet-adapter-wallets": "^0.19.3",
+    "@solana/web3.js": "^1.66.1",
     "autoprefixer": "^10.4.12",
     "graphql": "^16.6.0",
     "next": "12.3.1",
