--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 version: "3"
 services:
-  next:
+  web:
     build: .
+    command: yarn dev
     ports:
       - "3000:3000"
+    env_file: .env.local
+    depends_on:
+      - db
+      - migrate
+    volumes:
+      - ./:/opt/nextapp
+
+  migrate:
+    build: .
+    command: yarn migrate:dev
     env_file: .env.local
     depends_on:
       - db
