--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^4.4.0",
     "autoprefixer": "^10.4.12",
     "graphql": "^16.6.0",
+    "ipfs-core": "^0.16.1",
     "next": "12.3.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^2.16.105",
