--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.12",
     "graphql": "^16.6.0",
     "ipfs-core": "^0.16.1",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^2.16.105",
