--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@solana/wallet-adapter-wallets": "^0.19.4",
     "@solana/web3.js": "^1.66.2",
     "autoprefixer": "^10.4.12",
+    "bs58": "^5.0.0",
+    "cookies-next": "^2.1.1",
     "graphql": "^16.6.0",
     "ipfs-core": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "next": "12.3.1",
     "pdf-lib": "^1.17.1",
@@ -39,12 +42,15 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8",
     "swr": "^1.3.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/cookies": "^0.7.7",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
