--- a/.env.local-example
+++ b/.env.local-example
@@ -1,7 +1,5 @@
-AUTH0_SECRET=
-AUTH0_BASE_URL=
-AUTH0_ISSUER_BASE_URL=
-AUTH0_CLIENT_ID=
-AUTH0_CLIENT_SECRET=
+APP_SECRET=
+NEXT_PUBLIC_HOST=http://localhost:3000
+NEXT_PUBLIC_SOLANA_PROGRAM_ID=EqsfiqKZqSVk6r8mMBSsad6hMaYxy1pLqkfG2w6St9Yf
 
-DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+# NEXT_PUBLIC_SOLANA_RPC=http://localhost:8899
