file upload with encrypt/decrypt

--- a/.env.local-example
+++ b/.env.local-example
@@ -2,4 +2,6 @@ APP_SECRET=
 NEXT_PUBLIC_HOST=http://localhost:3000
 NEXT_PUBLIC_SOLANA_PROGRAM_ID=EqsfiqKZqSVk6r8mMBSsad6hMaYxy1pLqkfG2w6St9Yf
 
+WEB3_STORAGE_TOKEN=
+
 # NEXT_PUBLIC_SOLANA_RPC=http://localhost:8899
