--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.2",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.11",
+    "@ipld/car": "^5.0.0",
     "@project-serum/anchor": "^0.25.0",
     "@solana/wallet-adapter-base": "^0.9.18",
     "@solana/wallet-adapter-phantom": "^0.9.17",
@@ -23,7 +24,9 @@
     "cookies-next": "^2.1.1",
     "ipfs-core": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
+    "next-connect": "^0.13.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^2.16.105",
     "postcss": "^8.4.16",
@@ -34,12 +37,14 @@
     "react-toastify": "^9.0.8",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.8",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "web3.storage": "^4.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/cookies": "^0.7.7",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
