--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.12",
     "bs58": "^5.0.0",
     "cookies-next": "^2.1.1",
+    "ethers": "^5.7.2",
     "ipfs-car": "^0.9.1",
     "ipfs-core": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
