--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@solana/web3.js": "^1.66.2",
     "autoprefixer": "^10.4.12",
     "bs58": "^5.0.0",
+    "connectkit": "^1.1.1",
     "cookies-next": "^2.1.1",
     "ethers": "^5.7.2",
     "ipfs-car": "^0.9.1",
@@ -45,6 +46,7 @@
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.8",
     "tweetnacl": "^1.0.3",
+    "wagmi": "^0.9.2",
     "web3.storage": "^4.4.0"
   },
   "devDependencies": {
