--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ipfs-car": "^0.9.1",
     "ipfs-core": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "konva": "^8.3.14",
     "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-connect": "^0.13.0",
@@ -41,6 +43,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-konva": "^18.2.3",
     "react-toastify": "^9.0.8",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.8",
