--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.8",
     "tweetnacl": "^1.0.3",
+    "use-image": "^1.1.0",
     "web3.storage": "^4.4.0"
   },
   "devDependencies": {
